# python-flask-template

./: .mypy.ini  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
tests/: add_test.py
